[project]
name = "ashp"
version = "1.3.1"
description = "Toolbox for generating alpha shapes (fork of alphashape)."
authors = [{ name = "Mirza Arnaut", email = "mirza.arnaut45@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.4.1",
  "click-log>=0.4.0",
  "networkx>=3.6.1",
  "numba>=0.65.1",
  "numpy>=2.1",
  "rtree>=1.4.1",
  "scipy>=1.18.0",
  "shapely>=2.1.2",
  "trimesh>=4.12.2",
]

[project.optional-dependencies]
geo = ["geopandas>=1.1.3"]

[project.scripts]
ashp = "ashp.cli:main"

[dependency-groups]
dashboard = ["kaleido>=0.2.1", "plotly>=5.24", "streamlit>=1.40"]
test = ["geopandas>=1.1.3", "pytest>=8.0.0", "pytest-cov>=4.1.0"]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["uv_build>=0.8.0,<1.0.0"]
build-backend = "uv_build"

# [tool.uv.build-backend]
# module-name = "ashp"
# module-root = "src"

[tool.pyright]
exclude = [".venv", "alphashape"]
venvPath = ".venv"
venv = "."

[tool.ty.environment]
python = "./.venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
branch = "main"
