[project]
name = "ashp"
version = "1.4.0"
description = "Toolbox for generating alpha shapes (fork of alphashape)."
authors = [{ name = "Mirza Arnaut", email = "mirza.arnaut45@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.4.1",
  "click-log>=0.4.0",
  "networkx>=3.6.1",
  "numba>=0.65.1",
  "numpy>=2.1",
  "rtree>=1.4.1",
  "scipy>=1.18.0",
  "shapely>=2.1.2",
  "trimesh>=4.12.2",
]

[project.optional-dependencies]
geo = ["geopandas>=1.1.3"]

[project.scripts]
ashp = "ashp.cli:main"


[dependency-groups]
dashboard = [
    "matplotlib>=3.11.0",
    "plotly>=5.24",
    "streamlit>=1.40",
]
docs = [
    "linkify-it-py>=2.1.0",
    "myst-parser>=5.1.0",
    "pydata-sphinx-theme>=0.19.0",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-autodoc-typehints>=3.11.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-bibtex>=2.7.0",
]
test = ["geopandas>=1.1.3", "pytest>=8.0.0", "pytest-cov>=4.1.0"]

[tool.uv]
default-groups = ["test"]

[tool.pyright]
exclude = [".venv", "alphashape"]
venvPath = ".venv"
venv = "."

[tool.ty.environment]
python = "./.venv"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
# Bump pyproject, sync the project's own version in uv.lock (plain `uv lock`;
# --upgrade-package only touches registry deps, not the root project), build.
build_command = """
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.branches.main]
match = "main"

[build-system]
requires = ["uv_build>=0.8.0,<1.0.0"]
build-backend = "uv_build"

# [tool.uv.build-backend]
# module-name = "ashp"
# module-root = "src"

